--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>argentina-geo-popups</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Mapa interactivo | Flora Nativa Bahía Blanca</title>
+    <meta name="description" content="Mapa interactivo de proyectos de divulgación de la flora nativa de Argentina" />
+    <meta name="author" content="Flora Nativa Bahía Blanca" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,14 +14,18 @@
       rel="stylesheet"
     />
 
-    <meta property="og:title" content="argentina-geo-popups" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Mapa interactivo" />
+    <meta property="og:description" content="Mapa interactivo de proyectos de divulgación de la flora nativa de Argentina" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta property="og:locale" content="es_ar" />
+    <meta property="og:url" content="https://argentina.floranativabb.com.ar/" />
+    <meta property="og:site_name" content="Flora Nativa Bahía Blanca" />
+    <meta property="og:site" content="Flora Nativa Bahía Blanca" />
+    <meta property="og:type" content="website" />
   </head>
 
   <body>
