--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
     <meta property="og:title" content="Mapa interactivo" />
     <meta property="og:description" content="Mapa interactivo de proyectos de divulgación de la flora nativa de Argentina" />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="" /> -->
+    <meta property="og:image" content="https://argentina.floranativabb.com.ar/og-image.png" />
 
-    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
-    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://argentina.floranativabb.com.ar/og-image.png" />
+    
     <meta property="og:locale" content="es_ar" />
     <meta property="og:url" content="https://argentina.floranativabb.com.ar/" />
     <meta property="og:site_name" content="Flora Nativa Bahía Blanca" />
