--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     <meta property="og:site_name" content="Flora Nativa Bahía Blanca" />
     <meta property="og:site" content="Flora Nativa Bahía Blanca" />
     <meta property="og:type" content="website" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H64Z0VZDJZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-H64Z0VZDJZ');
+    </script>
   </head>
 
   <body>
